Fix spacing, add button effects, save background
Additional <fieldset> elements removed. Spacing fixed using additional
classes.

Button hover effect added.

Saved image to repo for potential background image.

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
         background-color: #1b1b32;
         margin-left: auto;
         margin-right: auto;
-        padding: 30px;
+        margin-bottom: -2em;
         min-width: 50%;
         max-width: 500px;
   }
@@ -37,6 +37,10 @@ body {
     padding-top: 0;
     padding-bottom: 0;
 }
+
+.main-label {
+    padding: 1em;
+}
   
 
   input,
@@ -59,7 +63,23 @@ body {
     vertical-align: middle;
   }
 
-  input[type="submit"] {
+  #description {
+    font-style: italic;
+  }
+
+  #rec,
+  #imp { 
+    text-align: left;
+    padding: 1em;
+    padding-top: -1em;
+    padding-bottom: -1em;
+    margin-bottom: -0.75em;
+}
+
+/* submit button */
+
+
+input[type="submit"] {
     display: block;
     width: 60%;
     margin: 1em auto;
@@ -70,13 +90,7 @@ body {
     min-width: 300px;
   }
 
-  #description {
-    font-style: italic;
-  }
 
-  #rec,
-  #imp { 
-    text-align: left;
-    padding: 1em;
-    margin-bottom: -0.75em;
-}
+  .button:hover {
+    background-color: #8181b1;
+  }
